--- a/respuesta-positiva-colombia/package.json
+++ b/respuesta-positiva-colombia/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.6.2",
+    "material-ui": "^0.19.4",
+    "re-base": "^3.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
