--- a/respuesta-positiva-colombia/package.json
+++ b/respuesta-positiva-colombia/package.json
@@ -7,6 +7,7 @@
     "material-ui": "^0.19.4",
     "re-base": "^3.2.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
   },
